<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin"
    tools:context=".TipActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tip_cost_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_star"
        app:layout_constraintBottom_toBottomOf="@id/tip_cost_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tip_cost_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_cost_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:hint="@string/tip_cost"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toRightOf="@+id/tip_cost_icon"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tip_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/tip_cost_min_width" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tip_options_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:src="@android:drawable/btn_radio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_cost_container" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tip_option_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/tip_option_questions"
        app:layout_constraintBottom_toBottomOf="@id/tip_options_icon"
        app:layout_constraintLeft_toRightOf="@id/tip_options_icon"
        app:layout_constraintTop_toTopOf="@id/tip_options_icon" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:checkedButton="@id/tip_option20"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/tip_options_icon"
        app:layout_constraintTop_toBottomOf="@+id/tip_options_icon">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tip_option20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_option_20" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tip_option18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_option_18" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tip_option15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_option_15" />
    </RadioGroup>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tip_round_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_options" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/tip_round"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/tip_round_up"
        app:layout_constraintBottom_toBottomOf="@id/tip_round_icon"
        app:layout_constraintLeft_toRightOf="@id/tip_round_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tip_round_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tip_button_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:enabled="false"
        android:text="@string/tip_button_calc"
        app:layout_constraintLeft_toRightOf="@id/tip_round_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_round" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_button_calc" />

</androidx.constraintlayout.widget.ConstraintLayout>